# APT-GET-load-slice-perf

./: CGO17-benchmarks-perf-stats-output.txt  CMakeLists.txt  CRONO-benchmarks-perf-stats-output.txt
results/pagerank/: capture_PCs_real.sh  capture_PCs_syn.sh  pagerank.ll
results/pagerank/pagerank-INPUT-N100000-DEG100/Perf-Stats-pagerank-INPUT-N100000-D100/: pagerank  pagerank-INPUT-N100000-D100-perf-stats.out  pagerank-pref-INPUT-100000-D100-perf-stats.out
results/pagerank/pagerank-INPUT-web-Google/Perf-Stats-pagerank-INPUT-Nweb-Google.txt-D/: pagerank  pagerank-INPUT-Nweb-Google.txt-D-perf-stats.out  pagerank-pref-INPUT-web-Google.txt-D-perf-stats.out  pagerank.ll
results/pagerank/pagerank-INPUT-web-Google/Perf-Stats-pagerank-INPUT-web-Google/: pagerank-INPUT-web-Google-perf-stats.out  pagerank-pref-INPUT-web-Google-perf-stats.out
scripts/: capture_PCs_real.sh  capture_PCs_syn.sh  run-CRONO-benchmarks.sh
